# sfcore

./: .gitignore  CMakeLists.txt  README.md  build.py  build.sh  oa.sh  sfcore.h  spargat.gpg
cmake/: system.cmake
include/: sfarg.h  sfcore.h  sfio.h  sfrcode.h  sfutility.h
include/math/: sfmath.h
include/sfdef/: sfdef.h
include/sfmath/: sfmath.h
include/sfmem/: sfmem.h
include/sfstr/: sfstr.h
include/types/: bool.h  int.h  real.h
rcode/: rcode.h  rdecrypt.c  rencrypt.c
rust/: Cargo.toml
rust/src/: sfcore.rs  sfio.rs  sfrcode.rs
sfbase/: sfbase.h
sfdef/: sfdef.h
sflog/: sflog.c  sflog.h
sfmath/: sfmath.c  sfmath.h
sfmem/: sfmem.c  sfmem.h
sfstr/: sfstr.c  sfstr.h
src/algorithm/: random.c  rdecrypt.c  rencrypt.c  swap.c
src/rcode/: rdecrypt.c  rencrypt.c
src/sflog/: sflog.c  swap.c
src/sfmath/: sfmath.c
src/sfmem/: sfmem.c
src/sfstr/: sfstr.c
tests/: sflog.c
